# mda-xdrlib

./: .gitattributes  CHANGES  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: deploy.yaml  gh-ci.yaml
mda-xdrlib/: __init__.py  _version.py
mda_xdrlib/: __init__.py  _version.py  xdrlib.py
mda_xdrlib/tests/: test_xdrlib.py
