[build-system]
requires = [
    'setuptools>=40.9.0',
    'versioningit',
]

[project]
name = "mda_xdrlib"
description = "Stand-alone XDRLIB module (from cpython 3.10.8)"
authors = [{name = "The MDAnalysis development team", email = "mdanalysis@numfocus.org"}]
maintainers = [{name = "The MDAnalysis development team", email = "mdanalysis@numfocus.org"}]
requires-python = ">= 3.8"
readme = "README.md"
license = { file="LICENSE" }
classifiers = [
    "Development Status :: 6 - Mature",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Archiving",
    "License :: OSI Approved :: Python Software Foundation License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
dynamic = ["version"]

[project.urls]
"Homepage" = "https://github.com/MDAnalysis/mda-xdrlib"

[project.optional-dependencies]
testing = ["pytest"]

[tool.versioningit]
default-version = "1+unknown"

[tool.versioningit.vcs]
method = "git"
# the below line expects tags to look like '1.0.2'.
# if prefixing with a v, e.g. 'v1.0.2', change it to ["v*"]
match = ["v*"]

[tool.versioningit.tag2version]
rmprefix = "v"

[tool.versioningit.format]
distance = "{base_version}+{distance}.{vcs}{rev}"
dirty = "{base_version}+{distance}.{vcs}{rev}.dirty"
distance-dirty = "{base_version}+{distance}.{vcs}{rev}.dirty"
