[metadata]
name = mda_xdrlib
author = MDAnalysis development team
author_email = mdanalysis@numfocus.org
summary = Stand-alone XDRLIB module (from cpython 3.10.8)
license = PSF License Version 2
license_file = LICENSE
description_file =
    README.md
long_description_content_type = text/markdown
url = https://github.com/MDAnalysis/mda-xdrlib
classifier =
    Development Status :: 6 - Mature
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: System :: Archiving
    License :: OSI Approved :: Python Software Foundation License
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent

[options]
python_requires = >= 3.6

[versioneer]
VCS = git
style = pep440-post
versionfile_source = mda_xdrlib/_version.py
versionfile_build = mda_xdrlib/_version.py
tag_prefix = ''
